tests/baselines/reference/parserES5ComputedPropertyName8(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserES5ComputedPropertyName8.ts(1,11): error TS2304: Cannot find name 'e'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserES5ComputedPropertyName8.ts (1 errors) ====
    var v: { [e]: number };
              ~
!!! error TS2304: Cannot find name 'e'.